actualizados archivos html, solucionado error en app.py

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -54,16 +54,16 @@
 
             {% if session['rol'] == 0 %}
             <li class="align-items-center justify-content-md-center fade-in">
-                <a href="{{ url_for('productor') }}" class="w-100">
+                <a href="{{ url_for('recolector') }}" class="w-100">
                     <button class="nav-item btn btn-outline-primary mb-3 px-4 py-3">
-                        Datos del productor
+                        Datos del recolector
                     </button>
                 </a>
             </li>
             <li class="align-items-center justify-content-md-center fade-in">
                 <a href="{{ url_for('tipo_prod') }}" class="w-100">
                     <button class="nav-item btn btn-outline-primary mb-3 px-4 py-3">
-                        Tipos de Productor
+                        Tipos de recolector
                     </button>
                 </a>
             </li>
@@ -71,14 +71,14 @@
             <li class="align-items-center justify-content-md-center fade-in">
                 <a href="#" class="w-100 disabled">
                     <button class="nav-item btn btn-outline-primary mb-3 px-4 py-3 disabled">
-                         Datos del productor
+                         Datos del recolector
                     </button>
                 </a>
             </li>
             <li class="align-items-center justify-content-md-center fade-in">
                 <a href="#" class="w-100 disabled">
                     <button class="nav-item btn btn-outline-primary mb-3 px-4 py-3 disabled">
-                        Tipos de Productor
+                        Tipos de recolector
                     </button>
                 </a>
             </li>
