--- a/src/templates/cosechas.html
+++ b/src/templates/cosechas.html
@@ -118,7 +118,7 @@
 
   {%if cosechas%}
       <div class="row justify-content-md-center fade-in">
-        <div class="col-12 col-md-8 table-responsive">
+        <div class="col-12 col-md-11 table-responsive">
           <table class="table mt-2 table-hover " id = "users">
             <thead>
               <th scope="col">ID</th>
@@ -134,12 +134,30 @@
                   <td class="table-light tdEdit" type="username" id="username">{{cosecha.descripcion}}</td>
                   <td class="table-light tdEdit" type="username" id="username">{{cosecha.inicio}}</td>
                   <td class="table-light tdEdit" type="username" id="username">{{cosecha.fin}}</td>
-                  <td>
+                  <td class="col-4">
                     <div class="cont">
+                      <button id="editbtn" method="POST" class="edit pencil btn" role="button" 
+                        data-bs-toggle="modal" data-bs-target="#EditarUsuario" onclick="">
+                        <div>
+                          <i class="fa-solid fa-file-lines"></i>
+                        </div>
+                      </button>
                       <button id="editbtn" method="POST" class="edit pencil btn" role="button" 
                         data-bs-toggle="modal" data-bs-target="#EditarUsuario" onclick="handleEdit()">
                         <div>
                           <i class="fa-solid fa-pencil"></i>
+                        </div>
+                      </button>
+                      <button id="editbtn" method="POST" class="edit pencil btn" role="button" 
+                        data-bs-toggle="modal" data-bs-target="#EditarUsuario" onclick="">
+                        <div>
+                          <i class="fas fa-play"></i>
+                        </div>
+                      </button>
+                      <button id="editbtn" method="POST" class="edit pencil btn" role="button" 
+                        data-bs-toggle="modal" data-bs-target="#EditarUsuario" onclick="">
+                        <div>
+                          <i class="fa-solid fa-file-arrow-up"></i>
                         </div>
                       </button>
                       <form name="ID" action="/admin/delete" method="POST" class="edit trash btn" role="button" onclick="handleDelete();">
@@ -148,6 +166,7 @@
                           <i class="fa-solid fa-trash"></i>
                         </div>
                       </form>
+
                     </div>
                   </td>
               </tr>
